--- a/build.gradle
+++ b/build.gradle
@@ -111,7 +111,14 @@ configurations {
     runtimeClasspath.extendsFrom localRuntime
 }
 
+repositories {
+    maven {
+        url = "https://api.modrinth.com/maven"
+    }
+}
+
 dependencies {
+    implementation "maven.modrinth:bagus-lib:${bagus_lib_version}"
     // Example optional mod dependency with JEI
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
     // compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
@@ -149,7 +156,8 @@ var generateModMetadata = tasks.register("generateModMetadata", ProcessResources
             mod_license            : mod_license,
             mod_version            : mod_version,
             mod_authors            : mod_authors,
-            mod_description        : mod_description
+            mod_description  : mod_description,
+            bagus_lib_version: bagus_lib_version, bagus_lib_version_range: bagus_lib_version_range,
     ]
     inputs.properties replaceProperties
     expand replaceProperties
