--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,8 @@ neo_version=21.1.146
 neo_version_range=[21.1.146,)
 # The loader version range can only use the major version of FML as bounds
 loader_version_range=[1,)
-
+bagus_lib_version_range=[1.21.1-13.8.2,)
+bagus_lib_version=1.21.1-13.8.2
 ## Mod Properties
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
